<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_estructura_cubierta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueJeans"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clima_rutinas_acesso"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@color/colorLavander"
            android:fontFamily="@font/ecol_font"
            android:gravity="center"
            android:shadowColor="#8a6603"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="1.8"
            android:text="@string/titulo_qbr"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLavander"
            android:fontFamily="@font/ecol_font"
            android:shadowColor="#8a6603"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="1.8"
            android:text="@string/descrpcion_qbr"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLavander"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtpuntos"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="Puntos:"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtresultadospuntos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titulofrgament"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/colorLavander"
                android:fontFamily="@font/ecol_font"
                android:shadowRadius="1.8"
                android:text="@string/titulo_estructura_rivera"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura1"/>
                <CheckBox
                    android:id="@+id/estructura1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura2"/>
                <CheckBox
                    android:id="@+id/estructura2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura4"/>
                <CheckBox
                    android:id="@+id/estructura4"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura5"/>
                <CheckBox
                    android:id="@+id/estructura5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura6"/>
                <CheckBox
                    android:id="@+id/estructura6"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura7"/>
                <CheckBox
                    android:id="@+id/estructura7"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura8"/>
                <CheckBox
                    android:id="@+id/estructura8"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura9"/>
                <CheckBox
                    android:id="@+id/estructura9"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura10"/>
                <CheckBox
                    android:id="@+id/estructura10"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/soleado"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/opcion_estructura11"/>
                <CheckBox
                    android:id="@+id/estructura11"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>
        </ScrollView>
</LinearLayout>